[package]
name = "chartsy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version= "0.12.1", features=["canvas", "advanced", "svg", "image"]}
rand = "0.8.5"
mongodb = {version="2.8.0", features=["async-std-runtime"], default-features=false}
dropbox-sdk = { version="0.18.0", features=["dbx_files", "dbx_users", "default_client"] }
svg = "0.16.0"
image = "0.25.0"
iced_aw = {version= "0.8.0", features=["modal", "card", "tabs", "tab_bar", "badge"]}
pwhash = "1.0.0"
directories = "5.0.1"
async-recursion = "1.0.5"
lettre = { version="0.11.4", default-features=false, features = ["smtp-transport", "hostname", "builder", "async-std1-rustls-tls"] }
regex = "1.10.3"
json = "0.12.4"
sha2 = "0.11.0-pre.3"
difflib = "0.4.0"