[package]
name = "chartsy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[dependencies]
iced = { git="https://github.com/iced-rs/iced.git", branch="master", features=["canvas", "advanced", "svg", "image", "tokio"] }
tokio = { version="1.37.0", features=["fs"] }
bytes = { version="1.6" }
rand = "0.8.5"
mongodb = "2.8.2"
dropbox-sdk = { version="0.18.0", features=["dbx_files", "dbx_users", "default_client"] }
svg = "0.16.0"
image = {  version="0.25.1", features = ["webp"] }
pwhash = "1.0.0"
directories = "5.0.1"
lettre = { version="0.11.4", default-features=false, features = ["smtp-transport", "hostname", "builder", "tokio1-rustls-tls"] }
regex = "1.10.3"
json = "0.12.4"
sha2 = "0.11.0-pre.3"
difflib = "0.4.0"
litcrypt2 = "0.1.2"
resvg = "0.41.0"
rfd = { version = "0.14.1" }
moka = { version = "0.12.7", features = ["future", "sync"] }
chrono = "0.4.38"
webp = "0.3.0"

[patch.'https://github.com/iced-rs/iced']
iced = { path="../iced" }